# AuRA_AAL

./: README.md  index.md
aura/: CMakeLists.txt  README.md  package.xml
aura/action/: avoid_obstacle.action  stay_on_path.action
aura/include/aal_potential_field_navigation/: Constants.h  Types.h
aura/include/aal_potential_field_navigation/motor_schemas/: AvoidObstacle.h  MotorSchema.h  MoveRobot.h  MoveToTarget.h  StayOnPath.h  WaitForObstacle.h
aura/include/aal_potential_field_navigation/navigation/: navigation_utils.h
aura/include/aal_potential_field_navigation/perceptual_schemas/: GetAlignment.h  GetDirection.h  GetFeedback.h  GetFloorValues.h  GetMotionVector.h  GetPosition.h  GetRFID.h  GetRingValues.h  PerceptualSchema.h
aura/include/aal_potential_field_navigation/utils/: image_converting_utils.h  potential_field_utils.hpp  utils.h
aura/launch/: amiro_aal_gazebo.launch  amiro_automatica_gazebo.launch  apfn_launcher_TWB.launch  apfn_launcher_gazebo.launch  helper_launcher_TWB.launch  helper_launcher_gazebo.launch  master_sync.launch
aura/media/automatica/: rfid_tags.yaml
aura/msg/: feedbackMessage.msg  motionVectorMessage.msg
aura/scripts/: AMiRoA_fsm.py
aura/scripts/interfaces/: action_interface.py  service_interface.py
aura/scripts/types/: ActionClient.py  enums.py  parameters.py  states.py
aura/src/: avoid_obstacle_node.cpp  move_robot_node.cpp  move_to_target_node.cpp  stay_on_path_node.cpp  wait_for_obstacle_node.cpp
aura/src/image_converting/: image_converting_node.cpp
aura/src/motor_schemas/: AvoidObstacle.cpp  MotorSchema.cpp  MoveRobot.cpp  MoveToTarget.cpp  StayOnPath.cpp  WaitForObstacle.cpp
aura/src/navigation/: beacon_node.cpp  navigation_utils.cpp
aura/src/perceptual_schemas/: GetAlignment.cpp  GetDirection.cpp  GetFeedback.cpp  GetFloorValues.cpp  GetMotionVector.cpp  GetPosition.cpp  GetRFID.cpp  GetRingValues.cpp
aura/src/utils/: dynamic_tf_broadcaster_node.cpp  dynamic_tf_with_odom_node.cpp  image_converting_utils.cpp  potential_field_utils.cpp  rfid_mockup_node.cpp
aura/src/visualization/: finalGradient_marker_node.cpp  gradient_orientation_plot_node.cpp  map_to_textured_quads_node.cpp  trace_node.cpp  vectorfield_merger_node.cpp  vectorfield_to_gridmap_node.cpp
aura/srv/navigation/: check_rfid.srv  get_rfid_type.srv
aura/srv/schema_backend/: get_field_by_key.srv  initiate_image_routine.srv
potential_field_navigation/: CMakeLists.txt
potential_field_navigation/config/: config_aal.rviz  config_gazebo.rviz
potential_field_navigation/include/: image_selecter_gui.hpp  potential_field_utils.hpp
potential_field_navigation/launch/: amiro_gazebo.launch  start_gazebo.launch
potential_field_navigation/media/: cam1_copy_w.xcf
potential_field_navigation/src/: edge_separation_node.cpp  image_selecter_node.cpp  image_to_vectorfield_charge_node.cpp  image_to_vectorfield_current_node.cpp  image_to_vectorfield_node.cpp  odom_to_vectorfield_node.cpp  pixel_odom_to_pseudo_metric_odom_node.cpp  redyeing_charge_node.cpp  vectorfield_merger_node.cpp  vectorfield_to_gridmap_node.cpp  vectorfield_to_kinematic_node.cpp
rsb_to_ros_bridge/src/: rst_value_array_to_ros_int_array.cpp
